# extendp

./: .gitignore  Makefile  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  default.nix  extend.c  extendp.cfg  flag.c  main.c  readcfg.c  xp.1  xp.man
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
doc/: Makefile  Makefile.am  Makefile.in
examples/: file-browser.sh
src/: Makefile  Makefile.am  Makefile.in  extendp.h  flag.c  main.c  ncurses.c  readcfg.c
src/.deps/: xp-main.Po  xp-readcfg.Po
static/gifs/: menu-gitlog  menu-ls
