AC_INIT([extendp], [0.1], [jkarni@gmail.com])
AM_INIT_AUTOMAKE([-Wall -Werror])
AC_PROG_CC


AC_CHECK_FUNCS([strdup])
AC_CHECK_HEADERS([fcntl.h])
AC_CHECK_HEADERS([stdlib.h])
AC_CHECK_HEADERS([string.h])
AC_CHECK_HEADERS([termios.h])
AC_CHECK_HEADERS([unistd.h])
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_PREREQ
AC_PROG_INSTALL
AC_TYPE_SIZE_T

AC_CONFIG_HEADER([config.h])
AC_CONFIG_FILES([
 Makefile src/Makefile
])
AC_OUTPUT
